--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-3 col-sm-6">
-        <img alt="Logo" class="logo" src="img/logo-light.jpg" />
+        <img alt="Logo" class="logo" src="img/mfossociety-light.png" />
       </div>
       <div class="col-md-3 col-sm-6">
         <div class="widget">
@@ -46,7 +46,7 @@
     <!--end of row-->
     <div class="row">
       <div class="col-sm-6">
-        <span class="sub">&copy; Copyright 2019 - 0x48piraj</span>
+        <span class="sub">&copy; Copyright 2019 - Manipal University Jaipur</span>
       </div>
       <div class="col-sm-6 text-right">
         <ul class="list-inline social-list">
